fixed title bug on mobile

--- a/css/screen.css
+++ b/css/screen.css
@@ -559,9 +559,15 @@ li {
 }
 
 .c-top__name {
-  font-size: 64px;
+  font-size: 48px;
   font-weight: 500;
   text-align: center;
+}
+
+@media (min-width: 375px) {
+  .c-top__name {
+    font-size: 64px;
+  }
 }
 
 @media (min-width: 992px) {
